--- a/style.css
+++ b/style.css
@@ -22,5 +22,27 @@ nav a{
     margin-bottom: 0.8rem;
 }
 @media screen and (max-width: 1920px) {
-    
+    body {
+        background-color: orange;
+        background-image: url(img/sunset-675847_1280.jpg);
+        background-repeat: no-repeat;
+        /* background-size: cover; */
+        background-size: 500px;
+        /* background-position: center; */
+        background-position: top;
+        width: 100%;
+        height: 300px;
+    }
+}
+@media screen and (max-width: 992px) {
+body {
+    background-color: blue;
+    background-image: url(img/forest-5375005_1280.jpg);
+}
+}
+@media screen and (max-width: 600px) {
+body{
+    background-color: khaki;
+    background-image: url(img/cute-7270285_1280.png);
+}
 }
